<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    android:orientation="vertical"
    tools:showIn="@layout/app_bar_main"
    android:background="#ffffff"
    android:paddingLeft="30dp"
    android:paddingRight="30dp">

    <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Industrial Master"-->
        <!--android:textSize="34sp"-->
        <!--android:padding="20dp"-->
        <!--android:textColor="@color/colorAccent"-->
        <!--android:background="@color/lightPrimary"-->
        <!--android:gravity="center"-->
        <!--android:elevation="10dp"/>-->

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo4"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.6"
        android:layout_marginTop="50dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="18dp"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:hint="@string/usernamehint"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.6">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="18dp"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:hint="@string/passwordhint"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp">



        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/reset"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/textIcons"
            android:textSize="18dp"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/login"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/textIcons"
            android:textSize="18dp"
            android:onClick="login"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.08"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/donthaveaccount"
            android:textSize="12dp"
            android:textColor="@color/textSecondary"
            android:gravity="center"
            android:textAllCaps="true"
            android:layout_weight="1.6"
            />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registe"
            android:textSize="12dp"
            android:textColor="@color/colorAccent"
            android:gravity="center"
            android:textAllCaps="true"
            android:clickable="true"
            android:layout_weight="3"/>
    </LinearLayout>


</LinearLayout>